// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = 'proto3';
package api;
option go_package = "internal/future/pb";

import 'api/messages.proto';

// Configuration for the Match Function to be triggered by Open Match to generate proposals.
message MatchFunctionConfig {
  message GrpcFunctionProperties {
      string host = 1;
      int32 port = 2;
  }

  message RestFunctionProperties {
      string host = 1;
      int32 port = 2;
  }

  // A developer-chosen human-readable name for this Match Function.
  string name = 1;

  // Properties for the type of this function.
  oneof function {
    GrpcFunctionProperties grpc_function = 101;
    RestFunctionProperties rest_function = 102;
  }
}

message GetMatchesRequest{
  // MatchFunction to be executed for the given list of MatchProfiles
  MatchFunctionConfig function = 1;

  // MatchProfiles for which this MatchFunction should be executed.
  repeated messages.MatchProfile profile = 2;
}

message GetMatchesResponse{
  // Result Match for the requested MatchProfile.
  messages.Match match = 1;
}

message AssignTicketsRequest {
  // List of Ticket ids for which the Assinment is to be made.
  repeated string ticket_id = 1;

  // Assignment to be associated with the Ticket ids.
  messages.Assignment assignment = 2;
}

message AssignTicketsResponse {
}

// The service implementing the Backent API that is called to generate matches and make assignments for Tickets.
service Backend {
  // GetMatches triggers execution of the specfied MatchFunction for each of the specified MatchProfiles.
  // Each MatchFunction execution returns a set of proposals which are then evaluated to generate results.
  // GetMatches method streams these results back to the caller.
  rpc GetMatches(GetMatchesRequest) returns (stream GetMatchesResponse) {
  }

  // AssignTickets sets the specified Assignment on the Tickets for the Ticket ids passed.
  rpc AssignTickets(AssignTicketsRequest) returns (AssignTicketsResponse) {
  }
}
